<resources>
    <string name="app_name">Examen_7s21</string>
    <string name="TituloPrincipal">EXAMEN_7S21</string>
    <string name="opc1">MOVIL ISP</string>
    <string name="Pregunta1">1.¿QUE TIPO DE PANTALLA ES MEJOR?</string>
    <string name="opc2">AMOLED</string>
    <string name="opc3">SUPER AMOLED\n</string>
    <string name="btn1">SIGUIENTE\n</string>
    <string name="btn3">CALIFICAR\n</string>
    <string name="Pregunta2">2.¿CUAL ES MEJOR RESOLUCION?</string>
    <string name="opc4">FHD</string>
    <string name="opc5">2K</string>
    <string name="opc6">4K</string>
    <string name="btn2">ANTERIOR\n</string>
    <string name="Pregunta3">3.¿CON QUE SE FRABRICAN LOS MOVILES?</string>
    <string name="opc7">ALUMINIO\n</string>
    <string name="opc8">PLASTICO\n</string>
    <string name="opc9">LOS DOS ELEMENTOS</string>
    <string name="Pregunta4">4.¿CUAL CREES QUE ES EL MEJOR PROCESADOR?</string>
    <string name="opc10">HUAWEI</string>
    <string name="opc11">SAMSUNG</string>
    <string name="opc12">APPLE</string>
    <string name="Pregunta5">5.¿CUAL CREES QUE ES LA MEJOR RAM?</string>
    <string name="opc14">DDR3 GAMA MED</string>
    <string name="opc15">DDR4 GAMA ALT</string>
    <string name="Pregunta6">6-¿CUAL CREES QUE TENGA MEJOR RENDIMIENTO?</string>
    <string name="opc16">HUAWEI</string>
    <string name="opc17">SAMSUNG</string>
    <string name="opc18">APPLE</string>
    <string name="Pregunta7">7.¿CUAL CREES QUE TENGA MEJOR RESOLUCION EN CAMARA?</string>
    <string name="Pregunta8">8.¿CUAL CREES QUE ES MEJOR CONECTOR?</string>
    <string name="opc19">TIPO C\n</string>
    <string name="opc20">TIPO 2.0</string>
    <string name="Pregunta9">9.¿CUAL CREES QUE SEA MEJOR PROCESADOR?</string>
    <string name="opc21">IOS</string>
    <string name="opc22">ANDROID</string>
    <string name="opc23">GOOGLE</string>
    <string name="Pregunta10">10.¿QUE MARCA ES TU TELEFONO?</string>
    <string name="opc24">OTRO</string>
    <string name="pgfin">¡GRACIAS POR CONTESTAR EL EXAMEN! C:</string>
</resources>